--- a/src/client.html
+++ b/src/client.html
@@ -10,34 +10,43 @@
     <script src="https://unpkg.com/chess.js"></script>
   </head>
   <body>
-    <!-- Name of the variable below needs work, I'll admit that... -->
-    <div id="box">
-      <b>LaskerChamp Chess!</b><br>
-      The #1 chess site in the world and in the universe!
+    <div id="main_page">
+      <button id="switch_to_game">click me</button>
+      <form onsubmit="return false">
+        <input type="text" id="username" placeholder="username">
+        <input type="text" id="password" placeholder="password">
+        <button id="submit">Submit</button>
+      </form>
     </div>
-    <span id="back_top_line"></span>
-    <div id="myBoard" style="width:400px;height:auto;" class="center"></div>
-    <div id="buttons" class="center">
-        <button id="startBtn">Start</button>
-        <button id="quitBtn">Quit</button>
-        <button id="restartBtn">Restart</button>
+    <div id="chess_game">
+      <!-- Name of the variable below needs work, I'll admit that... -->
+      <div id="box">
+        <b>LaskerChamp Chess!</b><br>
+        The #1 chess site in the world and in the universe!
+      </div>
+      <span id="back_top_line"></span>
+      <div id="myBoard" style="width:400px;height:auto;" class="center"></div>
+      <div id="buttons" class="center">
+          <button id="startBtn">Start</button>
+          <button id="quitBtn">Quit</button>
+          <button id="restartBtn">Restart</button>
+      </div>
+      <div>
+          <span id="StatusDisplay">
+              STATUS: <span id="status"></span>
+          </span>
+          <span id="fenDisplay">
+              FEN: <span id="fen"></span>
+          </span>
+          <button id="copy_fen">Copy FEN to clipboard</button>
+          <span id="pgnText">
+              <span>PGN:</span>
+                  <br>
+              <span id="pgn"></span>
+          </span>
+      </div>
+      <div id="game_over">game is in progress...</div>
     </div>
-    <div>
-        <span id="StatusDisplay">
-            STATUS: <span id="status"></span>
-        </span>
-        <span id="fenDisplay">
-            FEN: <span id="fen"></span>
-        </span>
-        <button id="copy_fen">Copy FEN to clipboard</button>
-        <span id="pgnText">
-            <span>PGN:</span>
-                <br>
-            <span id="pgn"></span>
-        </span>
-    </div>
-    <div id="game_over">game is in progress...</div>
-
     <script src="client.js"></script>
   </body>
 </html>
