a lot, in a nutshell, added more stylish things

--- a/src/client.html
+++ b/src/client.html
@@ -11,12 +11,16 @@
   </head>
   <body>
     <div id="main_page">
-      <button id="switch_to_game">click me</button>
+      <!-- Doesn't work, for some reason it will always print success in the console -->
       <form onsubmit="return false">
         <input type="text" id="username" placeholder="username">
         <input type="text" id="password" placeholder="password">
         <button id="submit">Submit</button>
       </form>
+      <h1 id="LaskerChamp_txt">LaskerChamp</h1>
+      <br>
+      <button id="switch_to_game" class="center">click me</button>
+      <div id="chess_game_txt">The Chess Site!</div>
     </div>
     <div id="chess_game">
       <!-- Name of the variable below needs work, I'll admit that... -->
