--- a/src/client.html
+++ b/src/client.html
@@ -55,6 +55,11 @@
           <button id="quitBtn" class="chess_control">Quit</button>
           <br>
           <button id="restartBtn" class="chess_control">Restart</button>
+          <br>
+          <button id="customizeBtn" class="chess_control" disabled>Customize</button>
+      </div>
+      <div id="user_log_info">
+        username: <span id="username_value"></span>
       </div>
     </div>
     <script src="client.js"></script>
