added commented features that can be intergrated

--- a/src/client.html
+++ b/src/client.html
@@ -23,7 +23,8 @@
         </form>
       </div>
       <!-- <button id="switch_to_game" class="center">click me</button> -->
-      <div id="chess_game_txt">The Chess Site!</div>
+      <div id="chess_game_txt">The Chess Site!</div> 
+    <h2 id="slogan">LaskerChamp- he's the past, we're the present, you're the future!</h2>
     </div>
     <div id="chess_game">
       <!-- Name of the variable below needs work, I'll admit that... -->
@@ -48,7 +49,7 @@
         <button id = "copy_fen" class="copy_btn">Copy FEN to clipboard</button>
         <button id = "copy_pgn" class="copy_btn">Copy PGN to clipboard</button>
       </div>
-      <div id="myBoard" style="width:400px;"></div>
+      <div id="myBoard" style="width:400px;height:auto;"></div>
       <div id="buttons">
           <button id="startBtn" class="chess_control">Start</button>
           <br>
