--- a/src/client.html
+++ b/src/client.html
@@ -60,8 +60,11 @@
           <button id="customizeBtn" class="chess_control" disabled>Customize</button>
       </div>
       <div id="user_log_info">
-        username: <span id="username_value"></span>
+        <!--<img id="user_image">--> username: <span id="username_value"></span><br>
+        rating: <span id="rating_value"></span>
       </div>
+      <img src="chessboardjs-1.0.0/img/chesspieces/wikipedia/wK.png" id="white_king_dsp" style="width:25px;height:auto;">
+      <img src="chessboardjs-1.0.0/img/chesspieces/wikipedia/bK.png" id="black_king_dsp" style="width:25px;height:auto;">
     </div>
     <script src="client.js"></script>
   </body>
