--- a/src/client.html
+++ b/src/client.html
@@ -17,7 +17,7 @@
         <form onsubmit="return false">
           <input type="text" id="username" placeholder="username">
           <br>
-          <input type="text" id="password" placeholder="password">
+          <input type="password" id="password" placeholder="password"><button onclick="showPassword()">👁</button>
           <br>
           <button id="submit" class="center">Submit</button>
         </form>
@@ -25,6 +25,10 @@
       <!-- <button id="switch_to_game" class="center">click me</button> -->
       <div id="chess_game_txt">The Chess Site!</div> 
     <h2 id="slogan">LaskerChamp- he's the past, we're the present, you're the future!</h2>
+    <div class="center" id="error_alert">
+      <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span> 
+      <span id="error_alert_txt"></span>
+    </div>
     </div>
     <div id="chess_game">
       <!-- Name of the variable below needs work, I'll admit that... -->
