added a login page and fixed show password oper.

--- a/src/client.html
+++ b/src/client.html
@@ -17,7 +17,7 @@
         <form onsubmit="return false">
           <input type="text" id="username" placeholder="username">
           <br>
-          <input type="password" id="password" placeholder="password"><button onclick="showPassword()" id="showPassword">👁</button>
+          <input type="password" id="password" placeholder="password"><button id="showPassword">👁</button>
           <br>
           <button id="submit" class="center">Submit</button>
         </form>
