added stockfish + full game available

--- a/src/login.html
+++ b/src/login.html
@@ -11,7 +11,7 @@
               <form onsubmit="return false">
                 <input type="text" id="username" placeholder="username">
                 <br>
-                <input type="password" id="password" placeholder="password"><button id="showPassword">👁</button>
+                <input type="password" id="password" placeholder="password"><button id="showPassword">o</button>
                 <br>
                 <button id="submit" class="center">Submit</button>
               </form>
