--- a/src/pages/first.html
+++ b/src/pages/first.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
     <head>
     <title>Chess Login Page</title>
     </head>
