--- a/src/pages/login.html
+++ b/src/pages/login.html
@@ -1,4 +1,39 @@
 <!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
+    <title>Sign Up</title>
+    <link rel="stylesheet" href="styles/register.css">
+</head>
+
+<body>
+    <div id="form-container">
+        <form action="" class="form">
+            <div class="form_group">
+                <input type="text" id="username" class="form_input" placeholder="Username" required>
+            </div>
+            <div class="form_group">
+                <input type="password" id="password" class="form_input" placeholder="Password" required>
+            </div>
+            <div class="form_group">
+                <input type="checkbox" id="show_password" class="form_checkbox">
+                <label for="show_password" class="form_label">Show Password</label>
+            </div>
+            <div class="form_group">
+                <input type="submit" value="Sign In" class="form_button">
+            </div>
+            <div class="form_group">
+                <span>Dont have an account?</span>
+                <a href="register" class="form_link">Sign Up</a>
+            </div>
+        </form>
+    </div>
+    <script src="scripts/login.js"></script>
+</body>
+</html>
+<!-- <!DOCTYPE html>
 <html>
     <head>
         <title>Chess Login Page</title>
@@ -22,4 +57,4 @@
           </div>
         <script src="scripts/login.js"></script>
     </body>
-</html>
+</html> -->
