updated registration page

--- a/src/pages/register.html
+++ b/src/pages/register.html
@@ -11,14 +11,16 @@
 <body>
     <div id="form-container">
         <form action="" class="form">
-            <div id="username_box" class="form_group">
+            <div class="form_group">
                 <input type="text" id="username" class="form_input" placeholder="Username" required>
+                <p class="help">3-32 letters and/or numbers but must start with a letter</p>
             </div>
-            <div class="form_group" id="email_box">
+            <div class="form_group">
                 <input type="email" id="email" class="form_input" placeholder="Email" required>
             </div>
-            <div class="form_group" id="password_box">
+            <div class="form_group">
                 <input type="password" id="password" class="form_input" placeholder="Password" required>
+                <p class="help">8-32 letters and numbers and must contain at least a nuber and a lowercase letter</p>
             </div>
             <div class="form_group">
                 <input type="checkbox" id="show_password" class="form_checkbox">
