--- a/src/pages/login.html
+++ b/src/pages/login.html
@@ -10,6 +10,7 @@
 
 <body>
     <div id="form-container">
+        <div id="loader"></div>
         <form action="" class="form">
             <div class="form_group">
                 <input type="text" id="username" class="form_input" placeholder="Username" required>
